--- a/guneyteletipUI/src/app/Features/Private/Definitions/Pages/role/role.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Definitions/Pages/role/role.component.html
@@ -6,14 +6,14 @@
           <pageheader headertext="Role Tanımlama" pageposition="TANIMLAMALAR > Role Tanımlama"></pageheader>
         </div>
       </div>
+      <!--<div class="row mb-3">
+    <div class="col">
+      <app-rolefilter></app-rolefilter>
+    </div>
+  </div>-->
       <div class="row mb-3">
         <div class="col">
-          <app-rolefilter></app-rolefilter>
-        </div>
-      </div>
-      <div class="row mb-3">
-        <div class="col">
-          <app-rolegrid></app-rolegrid>
+          <app-rolegrid [filterData]="roleFilterComponent?.roleNameOutput"></app-rolegrid>
         </div>
       </div>
 
