--- a/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosgrid/kosgrid.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosgrid/kosgrid.component.html
@@ -7,7 +7,7 @@
 </div>
 
 <div class="card mt-2">
-  <div class="card-header">
+  <div class="card-header p-1">
     <fa name="list"></fa>
     Kayıt Listesi > [Toplam:{{gridKos.data.totalCount}}/Seçili:{{gridKos.selectedItems.length}}/Tıklanan:{{gridKos.clickedItem!=undefined?1:0}}]
     <div class="pull-right">
