--- a/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosoperations.component.css
+++ b/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosoperations.component.css
@@ -1,10 +1,6 @@
-.divscroll {
-  overflow: auto;
-  scrollbar-3dlight-color: aqua;
-}
 
 .marginClass {
-  margin-top: 30px;
+  margin-top: 1.6rem;
 }
 .selected{
   color:blue;
