--- a/guneyteletipUI/src/app/Features/Public/testpage/testpage.component.html
+++ b/guneyteletipUI/src/app/Features/Public/testpage/testpage.component.html
@@ -1,7 +1,7 @@
 <div class="container-fluid h-100">
   <h5>Test Page Work's</h5>
-  <button class="btn btn-lg " (click)="getUserList()">
-   GİRİŞ 
+  <button class="btn btn-lg " (click)="getistatistic()">
+    GİRİŞ
   </button>
 </div>
 
