Servisler bağlandı(Devam ediyor...)

--- a/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosgrid/kosgrid.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosgrid/kosgrid.component.html
@@ -33,10 +33,10 @@
             <input type="checkbox" class="" [checked]="gridKos.isSelected(item)"
                    (change)="gridKos.onSelectItem(item)">
           </td>
-          <td class="p-0">{{item.patinetid}}</td>
-          <td class="p-0">{{item.patinename}}</td>
+          <td class="p-0">{{item.hastaNo}}</td>
+          <td class="p-0">{{item.patientName}}</td>
           <td class="p-0">{{item.accessionNumber}}</td>
-          <td class="p-0">{{item.modalite}}</td>
+          <td class="p-0">{{item.modality}}</td>
         </tr>
       </tbody>
     </table>
