--- a/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kostabs/kosdetailgrid/kosdetailgrid.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kostabs/kosdetailgrid/kosdetailgrid.component.html
@@ -4,12 +4,10 @@
 <div class="card mt-2">
   <div class="card-header">
     <fa name="list"></fa>
-    Kayıt Listesi
+    Kayıt Listesi > [Toplam:{{gridKosDetail.data.totalCount}}/Seçili:{{gridKosDetail.selectedItems.length}}/Tıklanan:{{gridKosDetail.clickedItem!=undefined?1:0}}]
     <div class="pull-right">
-      <select>
-        <option value="undefined">10</option>
-        <option value="undefined">25</option>
-        <option value="undefined">50</option>
+      <select [(ngModel)]="gridKosDetail.model.paging.count" (change)="gridKosDetail.onRefresh()">
+        <option *ngFor="let c of gridKosDetail.pager" [ngValue]="c">{{c}}</option>
       </select>
     </div>
   </div>
@@ -17,107 +15,38 @@
     <table #filterSection class="table table-bordered m-0 medlifeGrid">
       <thead>
         <tr>
-          <th scope="col" class="p-0"><input type="checkbox"></th>
-          <th scope="col" class="p-0">Kolon 1</th>
-          <th scope="col" class="p-0">Kolon 2</th>
-          <th scope="col" class="p-0">Kolon 3</th>
-          <th scope="col" class="p-0">Kolon 4</th>
-          <th scope="col" class="p-0">Kolon 5</th>
-          <th scope="col" class="p-0">Kolon 6</th>
-          <th scope="col" class="p-0">Kolon 7</th>
-        </tr>
-        <tr>
-          <th class="p-0"><a>X</a></th>
-          <th class="p-0">
-            <input class="filterInput" type="text" placeholder="">
-          </th>
-          <th class="p-0">
-            <input class="filterInput" type="text" placeholder="">
-          </th>
-          <th class="p-0">
-            <input class="filterInput" type="text" placeholder="">
-          </th>
-          <th class="p-0">
-            <input class="filterInput" type="text" placeholder="">
-          </th>
-          <th class="p-0">
-            <input class="filterInput" type="text" placeholder="">
-          </th>
-          <th class="p-0">
-            <input class="filterInput" type="text" placeholder="">
-          </th>
-          <th class="p-0">
-            <input class="filterInput" type="text" placeholder="">
-          </th>
+          <th scope="col" class="p-0"><input type="checkbox" (click)="gridKos.onSelectAll($event)"></th>
+          <th scope="col" class="p-0">id</th>
+          <th scope="col" class="p-0">kosStudyID</th>
+          <th scope="col" class="p-0">result</th>
+          <th scope="col" class="p-0">enumType</th>
+          <th scope="col" class="p-0">timeCreated</th>
+          <th scope="col" class="p-0">timeModified</th>
+          <th scope="col" class="p-0">userIDCreated</th>
+          <th scope="col" class="p-0">userIDModified</th>
         </tr>
       </thead>
       <tbody>
-        <tr>
+        <tr (click)="gridKosDetail.onClickItem(item)" *ngFor="let item of gridKosDetail.data.list" [class]="gridKosDetail.getRowClass(item)">
           <td class="p-0">
-            <input type="checkbox" class="">
+            <input type="checkbox" class="" [checked]="gridKosDetail.isSelected(item)"
+                   (change)="gridKosDetail.onSelectItem(item)">
           </td>
-          <td class="p-0">123123</td>
-          <td class="p-0">Kos 1</td>
-          <td class="p-0"></td>
-          <td class="p-0"></td>
-          <td class="p-0"></td>
-          <td class="p-0"></td>
-          <td class="p-0"></td>
-        </tr>
-        <tr>
-          <td class="p-0">
-            <input type="checkbox" class="">
-          </td>
-          <td class="p-0">321654</td>
-          <td class="p-0">Kos 2</td>
-          <td class="p-0"></td>
-          <td class="p-0"></td>
-          <td class="p-0"></td>
-          <td class="p-0"></td>
-          <td class="p-0"></td>
-        </tr>
-        <tr>
-          <td class="p-0">
-            <input type="checkbox" class="">
-          </td>
-          <td class="p-0">789987</td>
-          <td class="p-0">Kos 3</td>
-          <td class="p-0"></td>
-          <td class="p-0"></td>
-          <td class="p-0"></td>
-          <td class="p-0"></td>
-          <td class="p-0"></td>
-        </tr>
-        <tr>
-          <td class="p-0">
-            <input type="checkbox" class="">
-          </td>
-          <td class="p-0">456654</td>
-          <td class="p-0">Kos 4</td>
-          <td class="p-0"></td>
-          <td class="p-0"></td>
-          <td class="p-0"></td>
-          <td class="p-0"></td>
-          <td class="p-0"></td>
-        </tr>
-        <tr>
-          <td class="p-0">
-            <input type="checkbox" class="">
-          </td>
-          <td class="p-0">654456</td>
-          <td class="p-0">Kos 5</td>
-          <td class="p-0"></td>
-          <td class="p-0"></td>
-          <td class="p-0"></td>
-          <td class="p-0"></td>
-          <td class="p-0"></td>
+          <td class="p-0">{{id}}</td>
+          <td class="p-0">{{kosStudyID}}</td>
+          <td class="p-0">{{result}}</td>
+          <td class="p-0">{{enumType}}</td>
+          <td class="p-0">{{timeCreated}}</td>
+          <td class="p-0">{{timeModified}}</td>
+          <td class="p-0">{{userIDCreated}}</td>
+          <td class="p-0">{{userIDModified}}</td>
         </tr>
       </tbody>
     </table>
   </div>
-  <div class="row justify-content-center   mt-3">
+  <div class="row justify-content-center  mb-3">
     <div class="col-sm-7 pagination-sm  justify-content-center pageNumber">
-      <pagination class="justify-content-center" [boundaryLinks]="true" [totalItems]="10" [maxSize]="4" [itemsPerPage]="4" previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
+      <pagination class="justify-content-center" [boundaryLinks]="true" [totalItems]="gridKosDetail.data.totalCount" [maxSize]="4" [(ngModel)]="gridKosDetail.model.paging.pageNumber" [itemsPerPage]="gridKosDetail.model.paging.count" (pageChanged)="gridKosDetail.onPageChanged($event)" previousText="&lsaquo;" nextText="&rsaquo;" firstText="&laquo;" lastText="&raquo;">
       </pagination>
     </div>
   </div>
