--- a/guneyteletipUI/src/app/Shared/Layouts/sidelayout/sidelayout.component.html
+++ b/guneyteletipUI/src/app/Shared/Layouts/sidelayout/sidelayout.component.html
@@ -18,6 +18,7 @@
             <div id="collapseBasic1" [collapse]="isfirstCollapsed1" [isAnimated]="true" class="list-group list-group-flush ">
               <ul class="p-0 " style="list-style: none;">
                 <li><a routerLink="/operations/kos" class="list-group-item list-group-item-action bg-light " style="display: block !important; width: 200px"><fa name="angle-right"></fa> KOS İşlemleri</a></li>
+                <li><a routerLink="/definitions/jobs" class="list-group-item list-group-item-action bg-light " style="display: block !important; width: 200px"><fa name="angle-right"></fa> Arka Plan İşleri</a></li>
               </ul>
               
             </div>
