Error Handling servisi eklendi. Fontlar eklendi.

--- a/guneyteletipUI/src/app/Features/Private/Operations/Pages/jobs/jobsfilter/jobsfilter.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Operations/Pages/jobs/jobsfilter/jobsfilter.component.html
@@ -14,7 +14,7 @@
       <div class="col-md-4">
         <label>Job Id</label>
         <div class="input-group input-group-sm">
-          <input type="text" class="form-control input-sm" name="id" [(ngModel)]="filterData.jobId">
+          <input type="text" class="form-control input-sm" name="id" [(ngModel)]="filterData.jobIdList">
         </div>
       </div>
       <div class="col-md-4">
