--- a/guneyteletipUI/src/app/Shared/Components/filter/filter.component.html
+++ b/guneyteletipUI/src/app/Shared/Components/filter/filter.component.html
@@ -1,7 +1,7 @@
 
 <div class="m-0">
   <div class="card m-0">
-    <div class="card-header p-0 ">
+    <div class="card-header">
       <label class="label"><fa name="filter"></fa> {{headertext}} </label>
       <div class="pull-left">
         <button (click)="isCollapsed = !isCollapsed;" class="btn btn-sm btn-light" [attr.aria-expanded]="!isCollapsed" aria-controls="collapseBasic">
