--- a/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosfilter/kosfilter.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosfilter/kosfilter.component.html
@@ -1,6 +1,6 @@
 <!--filter is a component, created by Protek Developer Team. You can see the attribute of filter in Shared/Components/filter-->
 <filter header="Filtreleme">
-  <form style="font-family:'Times New Roman', Times, serif !important; font-size: small; color: black;"> 
+  <form > 
     <div class="form-row p-0 ">
       <div class="col-md-3">
         <label class="font-weight-bold">Hastane Seçimi</label>
@@ -15,6 +15,7 @@
         <label class="font-weight-bold">Tarih Aralığı</label>
         <div class="input-group input-group-sm mb-3">
           <input class="form-control" type="text"
+                 autocomplete="off"
                  name="dateRange"
                  [(ngModel)]="dateRange"
                  placeholder="Tarih Aralığı" [bsConfig]="{ isAnimated: true, dateInputFormat: 'DD/MM/YYYY'}" #drp="bsDaterangepicker" bsDaterangepicker >
