--- a/guneyteletipUI/src/app/Shared/Layouts/sidelayout/sidelayout.component.html
+++ b/guneyteletipUI/src/app/Shared/Layouts/sidelayout/sidelayout.component.html
@@ -1,8 +1,8 @@
 
-<div id="wrapper" class="body" [ngClass]="{'d-flex' : true , 'toggled' : collapse}" >
+<div id="wrapper" class="body textClass" [ngClass]="{'d-flex' : true , 'toggled' : collapse}" >
  
   <div class="bg-light border-right column" id="sidebar-wrapper">
-    <div  class="sidebar-heading top-left p-2 pl-3">
+    <div  class="p-2 pl-3">
       <a routerLink=""><img src="./././assets/img/logo.png" /></a>
     </div>
     <div class="list-group list-group-flush">
@@ -99,7 +99,7 @@
     </div>
 
     <div class="bottom">
-      <div class="container-fluid mt-2 p-0 ">
+      <div class="container-fluid mt-2 p-0 " style="min-height:100%">
         <router-outlet></router-outlet>
       </div>
       <div class="container-fluid m-0 p-0 footerClass">
