Servisler bağlandı ve test edildi.

--- a/guneyteletipUI/src/app/Features/Private/Definitions/Pages/user/user.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Definitions/Pages/user/user.component.html
@@ -19,7 +19,7 @@
 
       <div class="row mb-5">
         <div class="col">
-          <app-usertabs [clickedItem]="userGridComponent?.gridUser?.clickedItem?.pk"></app-usertabs>
+          <app-usertabs [clickedItem]="userGridComponent?.gridUser?.clickedItem?.id"></app-usertabs>
         </div>
       </div>
     </div>
