--- a/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosoperations.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosoperations.component.html
@@ -22,7 +22,7 @@
 
       <div class="row mb-5">
         <div class="col">
-          <app-kostabs [kosId]="2"></app-kostabs>
+          <app-kostabs [kosId]="kosGridComponent?.gridKos?.clickedItem?.id"></app-kostabs>
         </div>
       </div>
     </div>
