--- a/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kostabs/kostabs.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kostabs/kostabs.component.html
@@ -3,7 +3,7 @@
     <tab heading="Kos Detay" id="tab1">
       <app-kosdetail [kosId]="kosID"></app-kosdetail>
     </tab>
-    <tab heading="Tab 2" id="tab2">
+    <tab heading="Kos Geçmişi" id="tab2">
       <app-kosdetailgrid [kosId]="kosID"></app-kosdetailgrid>
     </tab>
   </tabset>
