--- a/guneyteletipUI/src/app/Features/Public/Login/Pages/login/login.component.html
+++ b/guneyteletipUI/src/app/Features/Public/Login/Pages/login/login.component.html
@@ -1,4 +1,4 @@
-<div class="body">
+<div class="body textClass">
   <div class="text-center pt-4">
     <img src="./././././assets/img/loginlogo.png" style="width: 350px; height:175px;"/>
   </div>
