--- a/guneyteletipUI/src/app/Features/Private/Definitions/Modals/edituser/edituser.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Definitions/Modals/edituser/edituser.component.html
@@ -10,44 +10,44 @@
         <div class="form-group row m-1" *ngIf="idDisabled">
           <label class="col-sm-4 col-form-label">ID : </label>
           <div class="col-sm-8">
-            <input type="number" class="form-control" name="id" [(ngModel)]="userSaveModel.ID" disabled>
+            <input type="number" class="form-control" name="id" [(ngModel)]="userModel.id" disabled>
           </div>
         </div>
         <div class="form-group row m-1">
           <label class="col-sm-4 col-form-label">Ad : </label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" name="ad" [(ngModel)]="userSaveModel.Name">
+            <input type="text" class="form-control" name="ad" [(ngModel)]="userModel.name">
           </div>
         </div>
         <div class="form-group row m-1">
           <label class="col-sm-4 col-form-label">Soyad : </label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" name="soyad" [(ngModel)]="userSaveModel.Surname">
+            <input type="text" class="form-control" name="soyad" [(ngModel)]="userModel.surname">
           </div>
         </div>
         <div class="form-group row m-1">
           <label class="col-sm-4 col-form-label">Kullanıcı Adı : </label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" name="kullaniciAdi" [(ngModel)]="userSaveModel.UserName">
+            <input type="text" class="form-control" name="kullaniciAdi" [(ngModel)]="userModel.userName">
           </div>
         </div>
 
         <div class="form-group row m-1">
           <label class="col-sm-4 col-form-label">E-Posta : </label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" name="email" [(ngModel)]="userSaveModel.EmailAdress">
+            <input type="text" class="form-control" name="email" [(ngModel)]="userModel.emailAdress">
           </div>
         </div>
         <div class="form-group row m-1">
           <label class="col-sm-4 col-form-label">Şifre : </label>
           <div class="col-sm-8">
-            <input type="text" class="form-control" name="sifre" [(ngModel)]="userSaveModel.Password">
+            <input type="text" class="form-control" name="sifre" [(ngModel)]="userModel.password">
           </div>
         </div>
         <div class="form-group row m-1 ml-5">
           <label class="col-sm-4 col-form-label">Aktif : </label>
           <div class="custom-control custom-checkbox mb-2">
-            <input name="Aktif" id="Aktif" type="checkbox" class="custom-control-input" [(ngModel)]="userSaveModel.RecordState">
+            <input name="Aktif" id="Aktif" type="checkbox" class="custom-control-input" [(ngModel)]="userModel.recordState">
             <label class="custom-control-label" for="Aktif"></label>
           </div>
         </div>
