--- a/guneyteletipUI/src/app/Shared/Layouts/sidelayout/sidelayout.component.html
+++ b/guneyteletipUI/src/app/Shared/Layouts/sidelayout/sidelayout.component.html
@@ -1,8 +1,43 @@
-
-<div id="wrapper" class="body textClass" [ngClass]="{'d-flex' : true , 'toggled' : collapse}" >
- 
+<!--<link href="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/css/bootstrap.min.css" rel="stylesheet" id="bootstrap-css">
+<script src="//maxcdn.bootstrapcdn.com/bootstrap/4.1.1/js/bootstrap.min.js"></script>
+<script src="//cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<nav class="navbar navbar-expand navbar-dark bg-primary">
+  <a href="#menu-toggle" id="menu-toggle" class="navbar-brand"><span class="navbar-toggler-icon"></span></a> <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarsExample02" aria-controls="navbarsExample02" aria-expanded="false" aria-label="Toggle navigation"> <span class="navbar-toggler-icon"></span> </button>
+  <div class="collapse navbar-collapse" id="navbarsExample02">
+    <ul class="navbar-nav mr-auto">
+      <li class="nav-item active"> <a class="nav-link" href="#">Home <span class="sr-only">(current)</span></a> </li>
+      <li class="nav-item"> <a class="nav-link" href="#">Link</a> </li>
+    </ul>
+    <form class="form-inline my-2 my-md-0"> </form>
+  </div>
+</nav>
+<div id="wrapper" class="toggled">
+  <!-- Sidebar 
+<div id="sidebar-wrapper">
+  <ul class="sidebar-nav">
+    <li class="sidebar-brand"> <a href="#"> Start Bootstrap </a> </li>
+    <li> <a href="#">Dashboard</a> </li>
+    <li> <a href="#">Shortcuts</a> </li>
+    <li> <a href="#">Overview</a> </li>
+    <li> <a href="#">Events</a> </li>
+    <li> <a href="#">About</a> </li>
+    <li> <a href="#">Services</a> </li>
+    <li> <a href="#">Contact</a> </li>
+  </ul>
+</div> <!-- /#sidebar-wrapper 
+<!-- Page Content 
+<div id="page-content-wrapper">
+  <div class="container-fluid mt-2 p-0 " style="min-height:100%;">
+    <router-outlet></router-outlet>
+  </div>
+  <div class="container-fluid m-0 p-0 footerClass">
+    <app-footer></app-footer>
+  </div>
+</div> <!-- /#page-content-wrapper 
+</div> <!-- /#wrapper -->
+<div id="wrapper" class="body textClass" [ngClass]="{'d-flex' : true , 'toggled' : collapse}">
   <div class="bg-light border-right column" id="sidebar-wrapper">
-    <div  class="p-2 pl-3">
+    <div class="p-2 pl-3">
       <a routerLink=""><img src="./././assets/img/logo.png" /></a>
     </div>
     <div class="list-group list-group-flush">
@@ -20,7 +55,7 @@
                 <li><a routerLink="/operations/kos" class="list-group-item list-group-item-action bg-light " style="display: block !important; width: 200px"><fa name="angle-right"></fa> KOS İşlemleri</a></li>
                 <li><a routerLink="/definitions/jobs" class="list-group-item list-group-item-action bg-light " style="display: block !important; width: 200px"><fa name="angle-right"></fa> Arka Plan İşleri</a></li>
               </ul>
-              
+
             </div>
           </a>
 
@@ -30,20 +65,20 @@
              [attr.aria-expanded]="!isfirstCollapsed3" aria-controls="collapseBasic3">
             <div class="d-flex justify-content-between mb-2">
               <p class="mb-1"><fa name="user"></fa>  TANIMLAMALAR</p>
-              <small class="pull-right" ><fa name="chevron-down" *ngIf="isfirstCollapsed3"></fa> <fa name="chevron-up" *ngIf="!isfirstCollapsed3"></fa></small>
+              <small class="pull-right"><fa name="chevron-down" *ngIf="isfirstCollapsed3"></fa> <fa name="chevron-up" *ngIf="!isfirstCollapsed3"></fa></small>
 
             </div>
             <div id="collapseBasic3" [collapse]="isfirstCollapsed3" [isAnimated]="true" class="list-group list-group-flush ">
-              <ul  class="p-0 " style="list-style: none;">
+              <ul class="p-0 " style="list-style: none;">
                 <li><a routerLink="/definitions/user" class="list-group-item list-group-item-action bg-light " style="display: block !important; width: 200px"><fa name="angle-right"></fa> Kullanıcı Tanımlama</a></li>
                 <li><a routerLink="/definitions/role" class="list-group-item list-group-item-action bg-light " style="display: block !important; width: 200px"><fa name="angle-right"></fa> Rol Tanımlama</a></li>
               </ul>
-              
+
             </div>
           </a>
         </li>
         <li>
-          <a class="list-group-item list-group-item-action"  (click)="isfirstCollapsed2 = !isfirstCollapsed2"
+          <a class="list-group-item list-group-item-action" (click)="isfirstCollapsed2 = !isfirstCollapsed2"
              [attr.aria-expanded]="!isfirstCollapsed2" aria-controls="collapseBasic2">
             <div class="d-flex justify-content-between mb-2">
               <p class="mb-1"><fa name="cogs"></fa>  AYARLAR</p>
@@ -51,7 +86,7 @@
 
             </div>
             <div id="collapseBasic2" [collapse]="isfirstCollapsed2" [isAnimated]="true" class="list-group list-group-flush ">
-              <ul  class="p-0 " style="list-style: none;">
+              <ul class="p-0 " style="list-style: none;">
                 <li><a routerLink="#" class="list-group-item list-group-item-action bg-light " style="display: block !important; width: 200px"><fa name="angle-right"></fa> Kullanıcı Ayarları</a></li>
                 <li><a routerLink="#" class="list-group-item list-group-item-action bg-light " style="display: block !important; width: 200px"><fa name="angle-right"></fa> Kos Ayarları</a></li>
                 <li><a routerLink="#" class="list-group-item list-group-item-action bg-light " style="display: block !important; width: 200px"><fa name="angle-right"></fa> Sistem Ayarları</a></li>
@@ -64,8 +99,8 @@
           <a routerLink="#" class="list-group-item list-group-item-action bg-light"></a>
         </li>
       </ul>
-      
-      
+
+
 
     </div>
   </div>
@@ -99,16 +134,14 @@
     </div>
 
     <div class="bottom">
-      <div class="container-fluid mt-2 p-0 " style="min-height:100%">
+      <div class="container-fluid mt-2 p-0 " style="min-height:100%;">
         <router-outlet></router-outlet>
       </div>
       <div class="container-fluid m-0 p-0 footerClass">
         <app-footer></app-footer>
       </div>
     </div>
-    
+
   </div>
 </div>
-
-
-
+   
