--- a/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosgrid/kosgrid.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosgrid/kosgrid.component.html
@@ -1,13 +1,13 @@
 <div class="m-0">
-  <button [disabled]="!gridKos.selectAll && gridKos.clickedItem == undefined" (click)="gridKos.onClickCreateKos()" class="btn btn-info smalbutton" tooltip="Koş Oluştur"><fa name="plus-circle"></fa></button>
-  <button [disabled]="!gridKos.selectAll && gridKos.clickedItem == undefined" (click)="gridKos.onClickSendKos()" class="btn btn-info smalbutton" tooltip="Seçilenlerin KOS'larını Gönder"><fa name="share-square"></fa></button>
-  <button [disabled]="!gridKos.selectAll && gridKos.clickedItem == undefined" (click)="gridKos.onClickDeleteKos()" class="btn btn-danger smalbutton" tooltip="Seçilenlerin KOS'larını Teletıp'tan sil"><fa name="trash"></fa></button>
-  <button [disabled]="!gridKos.selectAll && gridKos.clickedItem == undefined" (click)="gridKos.onClickUpdateReadKos()" class="btn btn-primary smalbutton" tooltip="Seçilenlerin KOS Durumlarını Teletıp'tan oku"><fa name="get-pocket"></fa></button>
-  <button [disabled]="!gridKos.selectAll && gridKos.clickedItem == undefined" (click)="gridKos.onClickReprocessKos()" class="btn btn-secondary smalbutton" tooltip="Reprocess Kos"><fa name="reply"></fa></button>
-  <button [disabled]="!gridKos.selectAll && gridKos.clickedItem == undefined" (click)="gridKos.onClickExportExcel()" class="btn btn-primary smalbutton" tooltip="Excel'e çevir"><fa name="table"></fa></button>
+  <button [disabled]="!gridKos.selectAll &&  !gridKos.selectedItems.length > 0" (click)="gridKos.onClickCreateKos()" class="btn btn-info smalbutton" tooltip="Koş Oluştur"><fa name="plus-circle"></fa></button>
+  <button [disabled]="!gridKos.selectAll &&  !gridKos.selectedItems.length > 0" (click)="gridKos.onClickSendKos()" class="btn btn-info smalbutton" tooltip="Seçilenlerin KOS'larını Gönder"><fa name="share-square"></fa></button>
+  <button [disabled]="!gridKos.selectAll &&  !gridKos.selectedItems.length > 0" (click)="gridKos.onClickDeleteKos()" class="btn btn-danger smalbutton" tooltip="Seçilenlerin KOS'larını Teletıp'tan sil"><fa name="trash"></fa></button>
+  <button [disabled]="!gridKos.selectAll &&  !gridKos.selectedItems.length > 0" (click)="gridKos.onClickUpdateReadKos()" class="btn btn-primary smalbutton" tooltip="Seçilenlerin KOS Durumlarını Teletıp'tan oku"><fa name="get-pocket"></fa></button>
+  <button [disabled]="!gridKos.selectAll &&  !gridKos.selectedItems.length > 0" (click)="gridKos.onClickReprocessKos()" class="btn btn-secondary smalbutton" tooltip="Reprocess Kos"><fa name="reply"></fa></button>
+  <button [disabled]="!gridKos.selectAll &&  !gridKos.selectedItems.length > 0" (click)="gridKos.onClickExportExcel()" class="btn btn-primary smalbutton" tooltip="Excel'e çevir"><fa name="table"></fa></button>
 </div>
 
-<div class="card mt-2">
+<div class="card mt-2 shadow bg-white rounded">
   <div class="card-header p-1">
     <fa name="list"></fa>
     Kayıt Listesi > [Toplam:{{gridKos.data.totalCount}}/Seçili:{{gridKos.selectedItems.length}}/Tıklanan:{{gridKos.clickedItem!=undefined?1:0}}]
@@ -22,7 +22,7 @@
       <thead>
         <tr>
           <th scope="col" class="p-0">
-            <input type="checkbox" (click)="gridKos.gridSelect($event,'selectPage')" [(ngModel)]="gridKos.selectPage" title="Sayfayı Seç">
+            <input type="checkbox" class="m-1" (click)="gridKos.gridSelect($event,'selectPage')" [(ngModel)]="gridKos.selectPage" title="Sayfayı Seç">
             <input type="checkbox" class="m-1" (click)="gridKos.gridSelect($event,'selectAll')" [(ngModel)]="gridKos.selectAll" title="Tümünü Seç">
           </th>
           <th scope="col" class="p-0" (click)="gridKos.onSorting('id')">ID<div class="pull-right mr-1"><fa name="sort"></fa></div></th>
@@ -30,19 +30,23 @@
           <th scope="col" class="p-0" (click)="gridKos.onSorting('patientName')">Hasta İsmi<div class="pull-right mr-1"><fa name="sort"></fa></div></th>
           <th scope="col" class="p-0" (click)="gridKos.onSorting('accessionNumber')">Accession No<div class="pull-right mr-1"><fa name="sort"></fa></div></th>
           <th scope="col" class="p-0" (click)="gridKos.onSorting('modality')">Modalite<div class="pull-right mr-1"><fa name="sort"></fa></div></th>
+          <th scope="col" class="p-0" (click)="gridKos.onSorting('creationDttm')">Oluşturma Tarihi<div class="pull-right mr-1"><fa name="sort"></fa></div></th>
+          <th scope="col" class="p-0" (click)="gridKos.onSorting('studyDate')">Study Date<div class="pull-right mr-1"><fa name="sort"></fa></div></th>
         </tr>
       </thead>
       <tbody>
         <tr (click)="gridKos.onClickItem(item)" *ngFor="let item of gridKos.data.list" [class]="gridKos.getRowClass(item)">
           <td class="p-0">
-            <input type="checkbox" class="" [checked]="gridKos.isSelected(item)"
-                   (change)="gridKos.onSelectItem(item)">
+            <input type="checkbox"  class="m-1" [checked]="gridKos.isSelected(item)"
+                   (change)="gridKos.onSelectItem(item)" [disabled] ="gridKos.selectAll">
           </td>
           <td class="p-0">{{item.id}}</td>
           <td class="p-0">{{item.hastaNo}}</td>
           <td class="p-0">{{item.patientName}}</td>
           <td class="p-0">{{item.accessionNumber}}</td>
           <td class="p-0">{{item.modality}}</td>
+          <td class="p-0">{{item.creationDttm | date : 'dd.MM.yyyy'}}</td>
+          <td class="p-0">{{item.studyDate | date : 'dd.MM.yyyy'}}</td>
         </tr>
       </tbody>
     </table>
