--- a/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosstatistic/kosstatistic.component.html
+++ b/guneyteletipUI/src/app/Features/Private/Operations/Pages/kosoperations/kosstatistic/kosstatistic.component.html
@@ -1,4 +1,4 @@
-<div class="card mt-2">
+<div class="card mt-2 shadow bg-white rounded">
   <div class="card-header p-1">
     <fa name="bar-chart"></fa>
     İstatistikler
