--- a/guneyteletipUI/src/app/Shared/Components/filter/filter.component.html
+++ b/guneyteletipUI/src/app/Shared/Components/filter/filter.component.html
@@ -1,6 +1,6 @@
 
 <div class="m-0">
-  <div class="card m-0">
+  <div class="card m-0 shadow  bg-white rounded">
     <div class="card-header">
       <label class="label"><fa name="filter"></fa> {{headertext}} </label>
       <div class="pull-left">
