--- a/guneyteletipUI/src/app/Shared/Layouts/sidelayout/sidelayout.component.html
+++ b/guneyteletipUI/src/app/Shared/Layouts/sidelayout/sidelayout.component.html
@@ -37,7 +37,7 @@
 </div> <!-- /#wrapper -->
 <div id="wrapper" class="body textClass" [ngClass]="{'d-flex' : true , 'toggled' : collapse}">
   <div class="bg-light border-right column" id="sidebar-wrapper">
-    <div class="p-2 pl-3">
+    <div class="p-2 pl-3 shadow bg-white rounded">
       <a routerLink=""><img src="./././assets/img/logo.png" /></a>
     </div>
     <div class="list-group list-group-flush">
@@ -105,7 +105,7 @@
     </div>
   </div>
   <div id="page-content-wrapper" class="column ">
-    <div class="header  top-right">
+    <div class="header  top-right shadow bg-white rounded">
       <nav class="navbar navbar-expand-lg navbar-light bg-light border-bottom sticky-top" (scroll)="onWindowScroll($event);">
         <button class="btn btn-light" id="menu-toggle" (click)="toggle()"><span class="navbar-toggler-icon"></span></button>
 
