--- a/guneyteletipUI/src/app/Shared/Pages/sidetest/sidetest.component.html
+++ b/guneyteletipUI/src/app/Shared/Pages/sidetest/sidetest.component.html
@@ -4,7 +4,7 @@
 <!------ Include the above in your HEAD tag ---------->
 
 
-<nav class="navbar navbar-expand navbar-dark bg-primary">
+<nav class="navbar navbar-expand navbar-dark bg-primary shadow">
   <a (click)="toggle()" id="menu-toggle" class="navbar-brand">
     <span class="navbar-toggler-icon"></span>
   </a>
@@ -22,43 +22,68 @@
 <div id="wrapper" [ngClass]="{'toggled' : collapse}">
   <!-- Sidebar -->
   <div id="sidebar-wrapper">
-    <div class="container">
-   
-     
-      <div class="panel-group">
-        <div class="panel panel-default" style="background-color: black">
-          <div class="panel-heading">
-            <h4 class="panel-title">
-              <a data-toggle="collapse" href="#test">Info</a>
-            </h4>
-          </div>
-          <div id="test" class="panel-collapse collapse" style="background-color: black">
-            <ul class="list-group" style="background-color: black">
-              <li class="list-group-item" style="background-color: black; color:white">Java</li>
-              <li class="list-group-item" style="background-color: black; color:white">PHP</li>
-              <li class="list-group-item" style="background-color: black; color:white">C++</li>
-              <li class=" list-group-item" style="background-color: black; color:white">HTML5</li>
-              <li class=" list-group-item" style="background-color: black; color:white">jQuery</li>
-            </ul>
-          </div>
-        </div>
-        <div class="panel panel-default">
-          <div class="panel-heading">
-            <h4 class="panel-title">
-              <a data-toggle="collapse" href="#test1">Info</a>
-            </h4>
-          </div>
-          <div id="test1" class="panel-collapse collapse">
-            <ul class="list-group">
-              <li class="list-group-item">Java</li>
-              <li class="list-group-item">PHP</li>
-              <li class="list-group-item">C++</li>
-              <li class=" list-group-item">HTML5</li>
-              <li class=" list-group-item">jQuery</li>
-            </ul>
-          </div>
-        </div>
-      </div>
+    <div class="list-group list-group-flush">
+      <ul class="p-0 " style="list-style: none;">
+        <li>
+          <a class="list-group-item list-group-item-action" (click)="isfirstCollapsed1 = !isfirstCollapsed1"
+             [attr.aria-expanded]="!isfirstCollapsed1" aria-controls="collapseBasic1">
+            <div class="d-flex justify-content-between mb-2" style="color: inherit !important">
+              <p class="mb-1"><fa name="exchange"></fa>  İŞLEMLER</p>
+              <small class="pull-right"><fa name="chevron-down" *ngIf="isfirstCollapsed1"></fa> <fa name="chevron-up" *ngIf="!isfirstCollapsed1"></fa></small>
+
+            </div>
+            <div id="collapseBasic1" [collapse]="isfirstCollapsed1" [isAnimated]="true" class="list-group list-group-flush ">
+              <ul class="p-0 " style="list-style: none;">
+                <li><a routerLink="/operations/kos" class="list-group-item list-group-item-action bg-light " style="display: block !important; width: 200px"><fa name="angle-right"></fa> KOS İşlemleri</a></li>
+                <li><a routerLink="/definitions/jobs" class="list-group-item list-group-item-action bg-light " style="display: block !important; width: 200px"><fa name="angle-right"></fa> Arka Plan İşleri</a></li>
+              </ul>
+
+            </div>
+          </a>
+
+        </li>
+        <li>
+          <a class="list-group-item list-group-item-action" (click)="isfirstCollapsed3 = !isfirstCollapsed3"
+             [attr.aria-expanded]="!isfirstCollapsed3" aria-controls="collapseBasic3">
+            <div class="d-flex justify-content-between mb-2">
+              <p class="mb-1"><fa name="user"></fa>  TANIMLAMALAR</p>
+              <small class="pull-right"><fa name="chevron-down" *ngIf="isfirstCollapsed3"></fa> <fa name="chevron-up" *ngIf="!isfirstCollapsed3"></fa></small>
+
+            </div>
+            <div id="collapseBasic3" [collapse]="isfirstCollapsed3" [isAnimated]="true" class="list-group list-group-flush ">
+              <ul class="p-0 " style="list-style: none;">
+                <li><a routerLink="/definitions/user" class="list-group-item list-group-item-action bg-light " style="display: block !important; width: 200px"><fa name="angle-right"></fa> Kullanıcı Tanımlama</a></li>
+                <li><a routerLink="/definitions/role" class="list-group-item list-group-item-action bg-light " style="display: block !important; width: 200px"><fa name="angle-right"></fa> Rol Tanımlama</a></li>
+              </ul>
+
+            </div>
+          </a>
+        </li>
+        <li>
+          <a class="list-group-item list-group-item-action" (click)="isfirstCollapsed2 = !isfirstCollapsed2"
+             [attr.aria-expanded]="!isfirstCollapsed2" aria-controls="collapseBasic2">
+            <div class="d-flex justify-content-between mb-2">
+              <p class="mb-1"><fa name="cogs"></fa>  AYARLAR</p>
+              <small class="pull-right"><fa name="chevron-down" *ngIf="isfirstCollapsed2"></fa> <fa name="chevron-up" *ngIf="!isfirstCollapsed2"></fa></small>
+
+            </div>
+            <div id="collapseBasic2" [collapse]="isfirstCollapsed2" [isAnimated]="true" class="list-group list-group-flush ">
+              <ul class="p-0 " style="list-style: none;">
+                <li><a routerLink="#" class="list-group-item list-group-item-action bg-light " style="display: block !important; width: 200px"><fa name="angle-right"></fa> Kullanıcı Ayarları</a></li>
+                <li><a routerLink="#" class="list-group-item list-group-item-action bg-light " style="display: block !important; width: 200px"><fa name="angle-right"></fa> Kos Ayarları</a></li>
+                <li><a routerLink="#" class="list-group-item list-group-item-action bg-light " style="display: block !important; width: 200px"><fa name="angle-right"></fa> Sistem Ayarları</a></li>
+              </ul>
+            </div>
+          </a>
+        </li>
+
+        <li>
+          <a routerLink="#" class="list-group-item list-group-item-action bg-light"></a>
+        </li>
+      </ul>
+
+
+
     </div>
   </div> <!-- /#sidebar-wrapper -->
   <!-- Page Content -->
